# timer_lib

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  TODO.md
.github/workflows/: release.yml  rust.yml
benches/: timer_bench.rs
examples/: feature_showcase.rs
src/: errors.rs  lib.rs  manager.rs  registry.rs  timer.rs
src/timer/: driver.rs  mod.rs  runtime.rs  tests.rs
tests/: public_api.rs  stress.rs  weird.rs
