[package]
name = "timer-lib"
version = "0.4.0"
authors = ["Tim Gatzke <post@tim-gatzke.de>"]
edition = "2021"
description = "A feature-rich Rust library for creating and managing timers."
license = "MIT"
repository = "https://github.com/Tfc538/timer_lib"
homepage = "https://github.com/Tfc538/timer_lib"
documentation = "https://docs.rs/timer-lib"
readme = "README.md"
keywords = ["timer", "async", "recurring", "scheduler", "timeout"]
categories = ["asynchronous"]

[dependencies]
async-trait = "0.1.83"
fastrand = "2"
log = { version = "0.4", optional = true }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }

[features]
logging = ["log"]
test-util = ["tokio/test-util"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "test-util"] }

[[bench]]
name = "timer_bench"
harness = false
